# elrepo-scripts

./: .gitignore  README.md  check-kabi.sh  mkdd.sh
getkmoddevs/: README.md  getkmoddevs-all.sh  getkmoddevs-single.sh  lsdevname.cpp
nvidia-json/: CMakeLists.txt  README.md  nvidia-json.cpp
